user_guides/per-application-failover/ingress-example/cafe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coffee
  template:
    metadata:
      labels:
        app: coffee
    spec:
      containers:
      - name: coffee
        image: pleshakov/nginx-hello:0.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: coffee-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: coffee
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tea
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tea 
  template:
    metadata:
      labels:
        app: tea 
    spec:
      containers:
      - name: tea 
        image: pleshakov/nginx-hello:0.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tea-svc
  labels:
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: tea
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mocha
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mocha 
  template:
    metadata:
      labels:
        app: mocha 
    spec:
      containers:
      - name: mocha 
        image: pleshakov/nginx-hello:0.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mocha-svc
  labels:
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: mocha
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: latte
spec:
  replicas: 2
  selector:
    matchLabels:
      app: latte 
  template:
    metadata:
      labels:
        app: latte 
    spec:
      containers:
      - name: latte 
        image: pleshakov/nginx-hello:0.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: latte-svc
  labels:
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: latte
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brew
spec:
  replicas: 2
  selector:
    matchLabels:
      app: brew
  template:
    metadata:
      labels:
        app: brew
    spec:
      containers:
      - name: brew
        image: pleshakov/nginx-hello:0.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: brew-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: brew
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chai
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chai
  template:
    metadata:
      labels:
        app: chai
    spec:
      containers:
      - name: chai
        image: pleshakov/nginx-hello:0.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: chai-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: chai
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flatwhite
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flatwhite
  template:
    metadata:
      labels:
        app: flatwhite
    spec:
      containers:
      - name: flatwhite
        image: pleshakov/nginx-hello:0.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: flatwhite-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: flatwhite
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frappuccino
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frappuccino
  template:
    metadata:
      labels:
        app: frappuccino
    spec:
      containers:
      - name: frappuccino
        image: pleshakov/nginx-hello:0.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frappuccino-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: frappuccino
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: macchiato
spec:
  replicas: 2
  selector:
    matchLabels:
      app: macchiato
  template:
    metadata:
      labels:
        app: macchiato
    spec:
      containers:
      - name: macchiato
        image: pleshakov/nginx-hello:0.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: macchiato-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: macchiato
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smoothie
spec:
  replicas: 2
  selector:
    matchLabels:
      app: smoothie
  template:
    metadata:
      labels:
        app: smoothie
    spec:
      containers:
      - name: smoothie
        image: pleshakov/nginx-hello:0.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: smoothie-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: smoothie
---
