user_guides/per-application-failover/ingress-example/cafe-ingress-latte.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: latte-ingress
  # use annotations with k8s version < 1.18.0
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  # ingressClassName: nginx # use only with k8s version >= 1.18.0
  tls:
  - hosts:
    - latte.example.com
    secretName: cafe-secret
  rules:
  - host: latte.example.com
    http:
      paths:
      - path: /latte
        backend:
          serviceName: latte-svc
          servicePort: 80
